[tool.poetry]
name = "iads_algorithms"
version = "0.1.0"
description = ""
authors = ["Artemis Livingstone <ar.d.livingstone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
